terraform-p/ec2.tf
resource "aws_instance" "control_plane" {
  ami           = var.ami
  instance_type = var.control_plane_instance_type
  subnet_id     = aws_subnet.public_subnet.id
  key_name      = var.key_name

  vpc_security_group_ids = [aws_security_group.k8s_sg.id]

  tags = {
    Name = "k8s-control-plane"
    role = "control"
  }
}

resource "aws_instance" "worker1" {
  ami           = var.ami
  instance_type = var.worker_instance_type
  subnet_id     = aws_subnet.private_subnet.id
  key_name      = var.key_name

  vpc_security_group_ids = [aws_security_group.k8s_sg.id]

  tags = {
    Name = "k8s-worker-1"
    role = "worker"
  }
}

resource "aws_instance" "worker2" {
  ami           = var.ami
  instance_type = var.worker_instance_type
  subnet_id     = aws_subnet.private_subnet.id
  key_name      = var.key_name

  vpc_security_group_ids = [aws_security_group.k8s_sg.id]

  tags = {
    Name = "k8s-worker-2"
    role = "worker"
  }
}
